# duckdb-python-neo

./: .gitignore  CMakeLists.txt  generate-wrapper.py  pyproject.toml  setup.py
include/: converters.hpp  duckdb_python.hpp  generated_converters.hpp  method_wrappers.hpp  pointer_wrappers.hpp
src/native/: configuration.cpp  init.cpp  open_connect.cpp
